direction is a bool

--- a/send_message.html
+++ b/send_message.html
@@ -16,7 +16,7 @@
         </p>
         <p>
             Message direction
-            <input name="direction" type="number">
+            <input name="direction" type="checkbox">
         </p>
         <p>
             Message is reply to
